--- a/blog/client/src/pages/about/about.css
+++ b/blog/client/src/pages/about/about.css
@@ -70,7 +70,7 @@
 }
 
 .life {
-    background-image: linear-gradient(#708896, #a0b3be ), url(https://scontent-atl3-2.xx.fbcdn.net/v/t39.30808-6/288462243_10160275934904396_7343865102906964137_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=e3f864&_nc_ohc=qhe2I_oprwYAX--QLgy&tn=sDww6FbdDUWzwvFn&_nc_ht=scontent-atl3-2.xx&oh=00_AT8vBdmPWW-CRLpMow6cgktkpd3d9BQGb70TIFGpZnD0aw&oe=6355E944);
+    background-image: linear-gradient(#708896, #a0b3be ), url(https://petpress.net/wp-content/uploads/2020/01/81536682_192447375276262_2128183788650034141_n1.jpg);
 }
 
 .musician, .programmer, .life {
