--- a/blog/client/src/pages/login/login.css
+++ b/blog/client/src/pages/login/login.css
@@ -41,6 +41,11 @@
     padding: 10px;
 }
 
+.loginButton:disabled{
+    cursor: not-allowed;
+    background-color: blue;
+}
+
 .loginRegisterButton {
     position: absolute;
     top: 60px;
