Media Query Updates CSS
Screen Width 768px breakpoint established on About, Settings, Header, Posts, and Single post pages.

--- a/blog/client/src/components/header/header.css
+++ b/blog/client/src/components/header/header.css
@@ -34,3 +34,12 @@
     object-fit: cover;
     /* filter: grayscale(75); */
 }
+
+@media screen and (max-width: 768px){
+    .headerTitleSm {
+        top: 29%;
+    }
+    .headerTitleLg {
+        top: 15%;
+    }
+}
