--- a/blog/client/src/components/sidebar/sidebar.css
+++ b/blog/client/src/components/sidebar/sidebar.css
@@ -85,3 +85,9 @@
 .sidebarIcon:hover {
     color: #b5c99a;
 }
+
+@media only screen and (max-width: 768px) {
+    .sidebar {
+        display: none
+    }
+}
