--- a/blog/client/src/components/NavBar/navbar.css
+++ b/blog/client/src/components/NavBar/navbar.css
@@ -107,3 +107,10 @@
     background: #807cb5 !important;
     border: 1px solid rgb(30, 9, 148) !important;
   }
+
+  @media screen and (max-width: 768px){
+    .navListItem, .navLeft, .navRight {
+        display: none;
+    }
+
+  }
