--- a/blog/client/src/components/post/post.css
+++ b/blog/client/src/components/post/post.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
 .postImg{
@@ -13,6 +14,12 @@
     object-fit: cover;
     border-radius: 7px;
     align-items: center;
+    overflow: hidden;
+    transition: 1.2s;
+}
+
+.postImg:hover {
+    transform: scale(1.1);
 }
 
 .postInfo {
@@ -110,6 +117,10 @@ hr {
         font-size: 18px;
     }
     .postTitle {
-        font-size: 30px;
+        font-size: 28px;
+    }
+    .post {
+       width: 90%; 
+       margin: 0px 0px 40px;
     }
 }
