--- a/blog/client/src/pages/register/register.css
+++ b/blog/client/src/pages/register/register.css
@@ -34,11 +34,17 @@
 .registerButton {
     margin-top: 20px;
     cursor:pointer;
-    background-color: lightcoral;
+    background-color: #93b6b6;
     border: none;
     color: white;
     border-radius: 10px;
     padding: 10px;
+    transition: 0.4s;
+}
+
+.registerButton:hover {
+    background: #b5c99a;
+    box-shadow: rgba(255, 255, 255, 0.5);
 }
 
 .registerLoginButton {
@@ -51,4 +57,15 @@
     padding: 10px;
     color: white;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .registerLoginButton {
+        display: none;
+    }
+    .registerButton {
+        margin-top: 3rem;
+        padding: .8rem 0;
+        font-size: 1.2rem;
+    }
 }
