--- a/blog/client/src/pages/settings/settings.css
+++ b/blog/client/src/pages/settings/settings.css
@@ -1,10 +1,11 @@
-.settings {
+.settingsPage {
     display: flex;
+    flex-direction: row;
 }
 
 .settingswrapper {
     flex: 9;
-    padding: 20px;
+    padding: 30px;
 }
 
 .settingsTitle {
@@ -39,13 +40,22 @@
 .settingsProfilePicture {
     display: flex;
     align-items: center;
-    margin: 10px 0;   
+    margin: 10px 0;  
+    object-fit: cover; 
+}
+
+.settingsProfilePictureDisplay {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;  
+    object-fit: cover; 
 }
 
 .settingsProfilePicture > img{
     width: 70px;
     height: 70px;
     border-radius: 50%;
+
 
 }
 
@@ -124,9 +134,12 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        margin: 0;
+        padding: 0;
+        width: 100%;
     }
     .settingsForm >input {
-        padding: 0 180px;
+        padding: 0;
         text-align: center;
 
     }
@@ -149,6 +162,7 @@
     }
     input {
         font-size: 20px;
+        width: 120%;
     }
     label {
         margin-bottom: 10px;
