--- a/blog/client/src/components/singlePost/singlePost.css
+++ b/blog/client/src/components/singlePost/singlePost.css
@@ -1,6 +1,5 @@
 .singlePost {
     flex: 9;
-    overflow-x: hidden;
 }
 
 .singlePostWrapper {
@@ -72,7 +71,7 @@
 
 .singlePostDescription {
     font-size: 18px;
-    line-height: 2rem;
+    line-height: 25px;
 }
 
 .singlePostDescription::first-letter {
@@ -117,53 +116,56 @@
     background-color: rgb(136, 255, 132);
 }
 
-@media screen and (max-width: 768px) {
-    .singlePost {
-        align-items: center;
-    }
-    .singlePostWrapper {
-        margin: 0;
-        width: 100%;
-        padding: 0;
-    }
-    .singlePostImg {
-        width: 100%;
-        overflow-x: hidden;
-    }
-    .singlePostTitle {
-        font-size: 2rem;
-        width: 100%;
-        text-align: left;
+.singlePostEditMobile {
+    display: none;
+}
 
+@media screen and (max-width: 768px) {
+    .singlePostTitle {
+        font-size: 3rem;
+        text-align: left;
+        margin: 1rem;
     }
     .singlePostDescription {
         font-size: 24px;
-        
     }
     .singlePostInfo {
-        font-size: 24px;
         flex-direction: column;
+        font-size: 24px;
+        text-align: left;
     }
     .singlePostInfo, .singlePostDescription {
-        margin: 1rem;
-        overflow-x: hidden;
-        width: 390px;
-        height: auto;
+        margin: 2rem;
+    }
+    .singlePostWrapper {
+        padding: 0;
     }
     .singlePostDescriptionInput {
-        margin: 0rem;
+        margin: 2rem;
     }
     .singleUpdateButton {
         margin-right: 2rem;
     }
-    .singlePostIcon {
+    .singlePost {
+        width: 100%;
+        margin: 1rem auto;
+    }
+    .singlePostDate {
+        margin-top: 1rem;
+    }
+    .singlePostEditMobile {
+        display: block;
+        text-align: center;
+        font-size: 3rem;
+        justify-content: space-between;   
+    }
+
+    .singlePostEdit {
         display: none;
     }
-    .singlePostTitleInput {
-        margin: 0;
-    }
-}
 
-@media screen and (max-width: 520px) {
-    
+    .fa-trash {
+        margin-left: 6rem;
+        padding-bottom: 2rem;
+    }
 }
