--- a/blog/client/src/components/posts/posts.css
+++ b/blog/client/src/components/posts/posts.css
@@ -11,6 +11,6 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin: 1rem auto;
+        margin: 1rem auto .5rem;
     }
 }
